teste de imagem

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peper Pokedex</title>
      <!---- links      --->
-    <link rel="shortcut icon" href="/assets/favicon-16x16.png" type="favicon pokedex">
+    <link rel="shortcut icon" href="/imagens/favicon-16x16.png" type="favicon pokedex">
     <link rel="stylesheet" href="./css/style.css">
 
      <!--  Main JS  -->
